# gdb-dashboard

./: .gdbinit  .gitignore  CHANGELOG.md  LICENSE  lefthook.yml  pyproject.toml
gdb_dashboard/: __init__.py  beautifier.py  gdb_loader.py  util.py
gdb_dashboard/debugger/: __init__.py
gdb_dashboard/settings/: r.py
scripts/: config.gdb
