[project]
name = "gdb-dashboard"
version = "0.1.0"
description = "A refactored fork of gdb-dashboard"
authors = [
    { name = "Andrea Cardaci", email = "cyrus.and@gmail.com" },
    { name = "Eric Johnson", email = "eric.j.johnson22@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.urls]
homepage = "https://github.com/ejohnso49/gdb-dashboard"
source = "https://github.com/ejohnso49/gdb-dashboard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "gdbundle",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "types-gdb>=15.0.0.20241204",
]

[tool.hatch.build.targets]
include = [
    "gdb_dashboard/*.py",
    "scripts/*.gdb",
]

[tool.uv.sources]
gdbundle = { path = "../gdbundle", editable = true }
