[project]
name = "gdb-dashboard"
version = "0.17.4+fork"
description = "A refactored fork of gdb-dashboard"
authors = [
    { name = "Andrea Cardaci", email = "cyrus.and@gmail.com" },
    { name = "Eric Johnson", email = "eric.j.johnson22@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
]

[project.urls]
homepage = "https://github.com/ejohnso49/gdb-dashboard"
source = "https://github.com/ejohnso49/gdb-dashboard"

[project.optional-dependencies]
optional = [
    "pygments>=2.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "gdbundle",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.6",
    "types-gdb>=15.0.0.20241204",
]

[tool.hatch.build.targets]
include = [
    "gdb_dashboard/*.py",
    "scripts/*.gdb",
]

[tool.uv.sources]
gdbundle = { path = "../gdbundle", editable = true }
